@@ -2,6 +2,9 @@ Post-v2.15.0
 ---------------------
    - In ovs-vsctl and vtep-ctl, the "find" command now accept new
      operators {in} and {not-in}.
+   - Userspace datapath:
+     * Auto load balancing of PMDs now partially supports cross-NUMA polling
+       cases, e.g if all PMD threads are running on the same NUMA node.
    - ovs-ctl:
      * New option '--no-record-hostname' to disable hostname configuration
        in ovsdb on startup.
